test/fail/basic_syntax/docstring_bad_indent.lily
#[
SyntaxError: Docstring line does not start with full '###'.
    from docstring_bad_indent.lily:7:
]#

###
##
define f {}
